--- a/MT/MT/MT.vcxproj
+++ b/MT/MT/MT.vcxproj
@@ -78,6 +78,12 @@
     <ReferencePath>;$(ReferencePath)</ReferencePath>
     <SourcePath>../../common/DX/lib;$(SourcePath)</SourcePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>../../common;../../common/DX/include;$(IncludePath)</IncludePath>
+    <LibraryPath>../../conmmon/DX/lib;$(LibraryPath)</LibraryPath>
+    <SourcePath>../../common/DX/lib;$(SourcePath)</SourcePath>
+    <OutDir>../Game</OutDir>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
@@ -128,7 +134,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <SubSystem>Console</SubSystem>
+      <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
